@@ -1,12 +1,0 @@
-include *.txt
-include tox.ini
-include docutils.conf
-recursive-include docutils *
-recursive-include docs *
-recursive-include licenses *
-recursive-include tools *
-recursive-include test *
-exclude test/alltests.out test/record.txt
-prune test/functional/output
-include test/functional/output/README.txt
-global-exclude *.pyc *~ __pycache__ .DS_Store
